src/objects/pca__Address__c.object
<CustomObject>
    <description>Custom address fields which Postcode Anywhere should integrate with</description>
    <fields>
        <fullName>pca__Admin_Area_Field__c</fullName>
        <inlineHelpText>The administration area or US county.</inlineHelpText>
        <label>Area/County Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Building_Field__c</fullName>
        <inlineHelpText>This field allows you to separately store a copy of the building name or number which is required some back back office systems, it will still appear as part of the street address.</inlineHelpText>
        <label>Building Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__City_Field__c</fullName>
        <label>City Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Company_Field__c</fullName>
        <inlineHelpText>If you specify a company name field and search in a country with premise level data, it can be used to search for the company address</inlineHelpText>
        <label>Company Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Country_Field__c</fullName>
        <label>Country Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Id_Field__c</fullName>
        <inlineHelpText>The unique delivery point reference number or Postcode Anywhere Id for the address. This can be used for de-duplication and helps with address data quality.</inlineHelpText>
        <label>Id Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Postalcode_Field__c</fullName>
        <label>Postalcode Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Setting__c</fullName>
        <description>The Postcode Anywhere Settings set that this integration relates to</description>
        <label>Setting</label>
        <referenceTo>pca__Setting__c</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pca__State_Field__c</fullName>
        <inlineHelpText>The state or UK county. This is usually part of the default salesforce address format.</inlineHelpText>
        <label>State Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Street_Field__c</fullName>
        <label>Street Field</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Type_Field__c</fullName>
        <inlineHelpText>If this field is a check box on your page layout it will checked when the address type is &quot;Residential&quot;</inlineHelpText>
        <label>Address Type Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Validation_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. We can populate this field for you with the validation state of the address. Specifying this field and adding it into a validation rule allows you to force users to enter validated addresses.</inlineHelpText>
        <label>Validation Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Address Integration</label>
    <nameField>
        <label>Address Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>